<resources>
    <string name="app_name">NRCan</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_station">Station</string>
    <string name="title_back">BACK</string>
    <string name="title_save">SAVE</string>
    <string name="station_label_traverse">Trav</string>
    <string name="station_label_date">Date</string>
    <string name="station_label_elevation">Elevation (m)</string>
    <string name="station_label_method">Method</string>
    <string name="station_label_easting">Easting (m)</string>
    <string name="station_label_northing">Northing (m)</string>
    <string name="station_label_latitude">Latitude</string>
    <string name="station_label_longitude">Longitude</string>
    <string name="station_label_obstype">Observation Type</string>
    <string name="station_label_outcropqual">Outcrop Quality</string>
    <string name="station_label_physenviron">Phys. Environ</string>
    <string name="station_label_outcropsize">Outcrop Size</string>
    <string name="station_label_airphoto">Airphoto</string>
    <string name="station_label_partner">Partner</string>
    <string name="station_button_airphoto">L</string>
    <string name="station_label_stationnote">Station Note (254 chars max)</string>
    <string name="station_label_sincelaststationnote">Since last station Note (254 chars max)</string>
    <string name="station_label_legendvalue">Legend Value</string>
    <string name="station_label_sitequal">Site Qual.</string>
    <string name="station_label_interpretation">Interpretation</string>
    <string name="station_label_mapsheet">Map Sheet</string>
    <string name="station_label_entryType">Entry Type</string>
    <string name="sample_label_type">Type</string>
    <string name="sample_label_purpose">Purpose</string>
    <string name="sample_button_purpose">C</string>
    <string name="sample_label_format">Format</string>
    <string name="sample_label_strike">Strike</string>
    <string name="sample_label_dip">Dip</string>
    <string name="sample_label_azimuth">Azimuth</string>
    <string name="sample_label_DipPlunge">Dip/Plunge</string>
    <string name="sample_label_surface">Surface</string>
    <string name="sample_label_note">Note</string>
    <string name="structure_label_class">Class</string>
    <string name="structure_label_type">Type</string>
    <string name="structure_label_detail">Detail</string>
    <string name="structure_label_method">Method</string>
    <string name="structure_label_format">Format</string>
    <string name="structure_label_strike">Azimuth</string>
    <string name="structure_label_dip">Dip/Plunge</string>
    <string name="structure_label_attitude">Attitude</string>
    <string name="structure_label_younging">Younging</string>
    <string name="structure_label_generation">Generation</string>
    <string name="structure_label_strain">Strain</string>
    <string name="structure_label_flattening">Flattening</string>
    <string name="structure_label_related">Related</string>
    <string name="structure_label_fabric">Fabric (254 chars max)</string>
    <string name="structure_label_sense">Sense (254 chars max)</string>
    <string name="structure_label_note">Note (254 chars max)</string>
    <string name="photo_button_summary">S</string>
    <string name="photo_label_category">Category</string>
    <string name="photo_label_filename">File name</string>
    <string name="photo_label_direction">Direction</string>
    <string name="photo_label_caption">Caption (254 chars max)</string>
    <string name="photo_button_caption">L</string>
    <string name="pflow_label_class">Class</string>
    <string name="pflow_label_direction">Direction</string>
    <string name="pflow_label_feature">Feature</string>
    <string name="pflow_label_method">Method</string>
    <string name="pflow_label_azimuth">Azimuth</string>
    <string name="pflow_label_plungedip">Plunge/Dip</string>
    <string name="pflow_label_age">Age</string>
    <string name="pflow_label_indicators"># Indicators</string>
    <string name="pflow_label_definition">Definition</string>
    <string name="pflow_label_relationship">Relationship</string>
    <string name="pflow_label_note">Note (254 chars max)</string>
    <string name="pflow_label_sense">Sense</string>
    <string name="pflow_label_bedrockSurface">Bedrock Surface</string>
    <string name="tabhost_1">1</string>
    <string name="tabhost_2">2</string>
    <string name="tabhost_3">3</string>
    <string name="tabhost_4">4</string>
    <string name="tabhost_5">5</string>
    <string name="tabhost_6">6</string>
    <string name="tabhost_7">7</string>
    <string name="tabhost_8">8</string>
    <string name="metadata_label_workspace">Workspace</string>
    <string name="metadata_label_projectName">Project Name</string>
    <string name="metadata_label_projectCode">Project Code</string>
    <string name="metadata_label_projectLeader">Project Leader</string>
    <string name="metadata_label_projectType">Project Type</string>
    <string name="metadata_label_geologistName">Geologist Name</string>
    <string name="metadata_label_geologistCode">Geologist Code</string>
    <string name="metadata_label_cameraPrefix">Camera Prefix</string>
    <string name="metadata_label_selectMapProjection">Select Map Projection</string>
    <string name="metadata_label_stationStartNo">Station Start Number</string>
    <string name="earthmat_label_group">Group</string>
    <string name="earthmat_label_type">Type</string>
    <string name="earthmat_label_detail">Detail</string>
    <string name="earthmat_label_unit">Unit</string>
    <string name="earthmat_label_occursAs">Occurs As</string>
    <string name="earthmat_label_structure">Structure</string>
    <string name="earthmat_label_texture">Texture</string>
    <string name="earthmat_label_composition">Composition</string>
    <string name="earthmat_label_grnCry">Grn/Cry</string>
    <string name="earthmat_label_defFabric">Def fabric</string>
    <string name="earthmat_label_bedThick">Bed Thick</string>
    <string name="earthmat_label_rock">Rock</string>
    <string name="earthmat_label_mineral">Mineral</string>
    <string name="earthmat_label_mode">Mode</string>
    <string name="earthmat_label_description">Description (254 chars max)</string>
    <string name="earthmat_label_colour">Colour</string>
    <string name="earthmat_label_fresh">Colour Fresh</string>
    <string name="earthmat_label_weathered">Colour Weathered</string>
    <string name="earthmat_label_index">Index</string>
    <string name="earthmat_label_magSusceptibility">Mag Susceptibility (10&#8211;3 SI)</string>
    <string name="earthmat_label_fossil">Fossil</string>
    <string name="earthmat_label_fossilNote">Fossil Note (254 chars max)</string>
    <string name="earthmat_label_contactRelationships">Contact Relationships</string>
    <string name="earthmat_label_upper">Upper</string>
    <string name="earthmat_label_lower">Lower</string>
    <string name="earthmat_label_contactDescription">Contact Description (254 chars max)</string>
    <string name="earthmat_label_lithInterpretation">Lith Interpretation (254 chars max)</string>
    <string name="earthmat_label_lithInterpConfidence">Lith Interp Confidence</string>
    <string name="earthmat_label_surficialOrigin">Surficial Origin</string>
    <string name="earthmat_label_material">Material</string>
    <string name="earthmat_label_general">General</string>
    <string name="earthmat_label_primary">Primary</string>
    <string name="earthmat_label_other">Other</string>
    <string name="earthmat_label_interval">Interval</string>
    <string name="earthmat_label_intThickness">Thickness Type</string>
    <string name="earthmat_label_to">To (m)</string>
    <string name="earthmat_label_from">From (m)</string>
    <string name="earthmat_label_lowContact">Lower Contact</string>
    <string name="earthmat_label_interpretation">Contact Interpretation</string>
    <string name="earthmat_label_latContact">Lateral Contact</string>
    <string name="earthmat_label_sorting">Sorting</string>
    <string name="earthmat_label_matrix">Matrix</string>
    <string name="earthmat_label_modifier">Modifier</string>
    <string name="earthmat_label_oxidation">Oxidation</string>
    <string name="earthmat_label_compact">Compaction</string>
    <string name="earthmat_label_h2oContent">H2O Content</string>
    <string name="earthmat_label_jointing">Jointing</string>
    <string name="earthmat_label_hclReact">HCL React.</string>
    <string name="earthmat_label_fissility">Fissility</string>
    <string name="earthmat_label_mapUnit">Map Unit</string>
    <string name="earthmat_label_clastSize">Clast Size (cm)</string>
    <string name="earthmat_label_modal">Modal</string>
    <string name="earthmat_label_min">Min</string>
    <string name="earthmat_label_max">Max</string>
    <string name="earthmat_label_clastPer">Clast%</string>
    <string name="earthmat_label_clastForms">Clast Forms</string>
    <string name="earthmat_label_roundness">Roundness</string>
    <string name="earthmat_label_averageModal">Average/Modal</string>
    <string name="earthmat_label_maximum">Maximum</string>
    <string name="earthmat_label_minimum">Minimum</string>
    <string name="earthmat_label_to2">to</string>
    <string name="earthmat_label_erraticType">Erratic Type</string>
    <string name="earthmat_label_percent">%</string>
    <string name="earthmat_label_genFossilCategories">General Fossil Categories</string>
    <string name="earthmat_label_interpretation2">Interpretation</string>
    <string name="earthmat_label_notes">Notes (254 chars max)</string>
    <string name="earthmat_label_secondary">Secondary</string>
    <string name="earthmat_label_interpConf">Interpretation Confidence</string>
    <string name="earthmat_label_wayUp">Way up</string>
    <string name="earthmat_label_landForm">Landform</string>
    <string name="environ_label_drainage">Drainage</string>
    <string name="environ_label_slope">Slope(degrees)</string>
    <string name="environ_label_azimuth">Azimuth</string>
    <string name="environ_label_permafrost">Permafrost</string>
    <string name="environ_label_indicators">Indicators</string>
    <string name="environ_label_depthOfAL">Depth of Active Layers (m)</string>
    <string name="environ_label_gossan">Gossan</string>
    <string name="environ_label_minOfImp">Mineralization of Importance (254 chars max)</string>
    <string name="environ_label_specificNotes">Specific Notes</string>
    <string name="environ_label_exposureType">Exposure Type</string>
    <string name="environ_label_vegetation">Vegetation</string>
    <string name="environ_label_boulders">Boulders</string>
    <string name="environ_label_boulderField">Boulderfield</string>
    <string name="environ_label_groundCover">Ground Cover</string>
    <string name="environ_label_relief">Relief</string>
    <string name="environ_label_pattGrnd">Patterned Ground</string>
    <string name="environ_label_approxWidth">Approx. Width (m)</string>
    <string name="environ_label_environNote">Environs Note (254 chars max)</string>
    <string name="environ_label_percentBedrock">Percent Bedrock</string>
    <string name="environ_label_patternArea">Patterned Area</string>
    <string name="soilpro_label_hrzThick">Hrz Thickness</string>
    <string name="soilpro_label_depth">Depth</string>
    <string name="soilpro_label_hrzQual">Hrz Qualifier</string>
    <string name="soilpro_label_oHrz">O-Hrz</string>
    <string name="soilpro_label_lfhHrz">LFH-Hrz</string>
    <string name="soilpro_label_aHrz">A-Hrz</string>
    <string name="soilpro_label_bHrz">B-Hrz</string>
    <string name="soilpro_label_cHrz">C-Hrz</string>
    <string name="soilpro_label_rHrz">R-Hrz</string>
    <string name="soilpro_label_totalProfile">Total Profile</string>
    <string name="hints_zero">0</string>
</resources>