<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >
    
    <TextView
        android:id="@+id/station_label_obstype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_label_obstype"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
            android:id="@+id/station_spinner_obstype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/station_label_outcropqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_label_outcropqual"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
            android:id="@+id/station_spinner_outcropqual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/station_label_physenviron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_label_physenviron"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
            android:id="@+id/station_spinner_physenviron"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/station_label_outcropsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_label_outcropsize"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/station_text_outcropsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="number" />
    
    <TextView
        android:id="@+id/station_label_airphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_label_airphoto"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <EditText
        android:id="@+id/station_text_airphoto"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:inputType="text" />"

        <Button
        android:id="@+id/station_button_airphoto"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/station_button_airphoto" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/station_label_partner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_label_partner"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
            android:id="@+id/station_spinner_partner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
        	android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>