<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/station_surficial_label_obstype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_label_obstype"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/station_surficial_spinner_obstype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/station_surficial_label_legendvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_label_legendvalue"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/station_surficial_text_legendvalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/station_surficial_label_sitequal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_label_sitequal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/station_surficial_spinner_sitequal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/station_surficial_label_physenviron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_label_physenviron"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/station_surficial_spinner_physenviron"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/station_surficial_label_interpretation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_label_interpretation"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/station_surficial_spinner_interpretation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/station_surficial_label_airphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_label_airphoto"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/station_surficial_text_airphoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:inputType="text" />

        <Button
            android:id="@+id/station_surficial_button_airphoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.1"
            android:text="@string/station_button_airphoto" />
    </LinearLayout>

    <TextView
        android:id="@+id/station_surficial_label_mapsheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_label_mapsheet"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/station_surficial_text_mapsheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:inputType="text" />

        <Button
            android:id="@+id/station_surficial_button_mapsheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.1"
            android:text="@string/station_button_airphoto" />
    </LinearLayout>

</LinearLayout>