<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >
    
    <TextView
        android:id="@+id/structure_label_attitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/structure_label_attitude"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
            android:id="@+id/structure_spinner_attitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/structure_label_younging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/structure_label_younging"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
            android:id="@+id/structure_spinner_younging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/structure_label_generation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/structure_label_generation"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
            android:id="@+id/structure_spinner_generation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/structure_label_strain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/structure_label_strain"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
            android:id="@+id/structure_spinner_strain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/structure_label_flattening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/structure_label_flattening"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
            android:id="@+id/structure_spinner_flattening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/structure_label_related"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/structure_label_related"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
            android:id="@+id/structure_spinner_related"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
        	android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>